styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --textColor: #001931;
    --description_text: #627382;
    --border: #fafafa;
}

body {
    font-family: "Inter", sans-serif;
}

/* custom class  */
.container {
    width: 85%;
    max-width: 1360px;
    margin: 0 auto;
}

.btn {
    padding: 12px 16px;
    background-color: #30B868;
    border: none;
    outline: none;
    border-radius: 4px;
    cursor: pointer;
    font-weight: 600;
    font-size: 16px;
}

/* ========================================= start top nav ============================================*/
/* custom class  */
header {
    padding: 16px 0;
}

.top_navigation {
    display: flex;
    justify-content: space-between;
    align-items: center;


}

.top_navigation .navList {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 28px;

}

.top_navigation .navList .navItem {
    list-style: none;
}

.top_navigation .navList .navItem .navLink {
    text-decoration: none;
    color: #000000;
    font-size: 16px;
    font-weight: 500;
    padding: 0 4px;
    transition: .2s ease-in-out;
}

.top_navigation .navList .navItem .navLink:hover {
    color: #30B868;
}

.nav_button {
    color: #fff;
    transition: all .2s ease-in-out;
}

.nav_button:hover {
    background-color: #19743e;
}

/* ========================================== hero section ==========================================*/
.hero {
    background: linear-gradient(#ffffff1c, #00193117, #30b86915), url('./assets/hero-bg.png') no-repeat center/cover;
    min-height: 520px;
}

.hero_badge_container {
    width: 100%;
    height: max-content;
    background: transparent;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 50px 0 0 0;
}

.hero_badge_container .heroBadge {
    background-color: #fff;
    width: 235px;
    height: 35px;
    border-radius: 1000px;
    display: flex;
    justify-content: center;
    gap: 6px;
    align-items: center;
}

.hero_badge_container .heroBadge svg {
    margin-top: 5px;
}

.hero_heading {
    padding: 32px 0 16px 0;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.hero_heading h1 {
    font-weight: 700;
    font-size: 72px;
    line-height: 60px;
    color: #fff;
    text-align: center;
    max-width: 56%;
}

.hero_heading h1 span {
    color: #30B868;
    font-size: 60px;
}

.hero_paragrap {
    padding: 20px 0;
    display: flex;
    justify-content: center;
}

.hero_paragrap p {
    text-align: center;
    font-size: 18px;
    line-height: 30px;
    color: #fff;
    max-width: 49%;
}

.hero_buttons {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 16px;
    padding: 16px 0;

}

.hero_btn1 {
    display: flex;
    justify-content: center;
    align-items: center;
    color: #fff;
    gap: 6px;
    border: 1px solid transparent;
    transition: all .2s ease-in-out;
}

.hero_btn1:hover {
    color: #fff;
    background-color: #19743e;
}

.hero_btn1 img {
    transition: all .2s ease-in-out;
}

.hero_btn1:hover img {
    transform: translateX(3px);
}

.hero_btn2 {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 6px;
    background-color: transparent;
    border: 1px solid #fff;
    color: #fff;
    transition: all .2s ease-in-out;

    svg {
        transition: all .2s ease-in-out;
    }
}

.hero_btn2:hover {
    background-color: #30B868;
    border: 1px solid transparent;
}

.hero_btn2:hover svg {
    transform: scale(0.8);
}



/* ======================================== start section 2 =================================================== */
.section2 {
    min-height: 300px;
}

.section2_heading {
    font-size: 48px;
    text-align: center;
    font-weight: bold;
    padding: 50px 0 10px 0;
}

.section2_title {
    text-align: center;
    color: #627382;
    font-weight: 400;
}

.section2_cards {
    width: 100%;
    height: max-content;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 16px;
    padding: 50px 0;

}

.section2 .card {
    max-width: 322px;
    height: max-content;
    border: 1px solid red;
    padding: 24px;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: #fff;
    border-radius: 4px;
    border: 1px solid var(--border);

}

.section2 .card .card_logo {
    background-color: #F95555;
    height: 60px;
    width: 60px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
}

.section2 .card h3 {
    padding: 16px 0;
    font-weight: 500;
    font-size: 24px;
}

.section2 .card .card_description {
    font-weight: 400;
    font-size: 16px;
    color: var(--description_text);
}

/* ========================================== start section 3 =========================================== */
.section3 {
    display: flex;
    justify-content: center;
    align-items: center;
}

.section3_mini_about_name {
    color: #30B868;
    font-size: 16px;
    font-weight: 400;
}

.section3_about_title {
    font-size: 48px;
    font-weight: bold;
    padding: 16px 0;
}

.section3_about_details {
    font-weight: 400;
    color: var(--description_text);
    font-size: 16px;
    padding: 0 0 26px 0;
}

.section3_about_list {
    list-style: none;
}

.section3_about_list .section3_about_list_item {
    font-size: 16px;
    display: flex;
    padding: 4px 0;
    gap: 6px;

    p {
        font-weight: 500;
    }
}


/*======================================= start section 4 =================================== */
.section4 {
    background-color: #f7f6f2;
    padding: 80px 40px;
    text-align: center;
    margin: 50px auto;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.section4 h1 {
    font-size: 40px;
    font-weight: bold;
}

.section4_description {
    font-size: 16px;
    font-weight: 400;
    color: var(--description_text);
    padding: 16px 0;
    max-width: 48%;
}

.section4_btn_container {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 16px 0;
}

.section4_btn {
    color: #fff;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 6px;
    transition: all .2s ease-in-out;
}

.section4_btn:hover {
    background-color: #001931;
    padding: 12px 28px;
}

.section4 span img {
    margin-top: 5px;
    transition: all .2s ease-in-out;
}

.section4_btn:hover span img {
    transform: translateX(10px);
}

/* foooter */
footer {
    background-color: #001931;
}

.foot_section_1 {
    padding: 50px 50px 20px 50px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: #fff;
}

.Social_LinksContainer {
    display: flex;
    justify-content: start;
    align-items: center;
    gap: 6px;
    padding: 10px 0;
    position: relative;
}

.foot_links p {
    font-size: 1.3rem;
}

.s_icon {
    cursor: pointer;
    position: absolute;
    top: 6px
}

.s_icon:nth-child(2) {
    left: 26px;
}

.s_icon:nth-child(3) {
    left: 52px;
}

.s_icon:hover svg {
    transition: all .2s ease-in-out;
}

.s_icon:hover svg {
    fill: #19743e;
    width: 25px;
    height: 25px;
}

.foot_section2 {
    border-top: 1px solid #2e4256;
    padding: 30px 0;
}

.foot_section2 p {
    color: var(--description_text);
}

@media screen and (max-width: 826px) {
    .top_navigation .navList {
        display: none;
    }

    .section2_cards {
        flex-direction: column;
    }

    .section3 {
        flex-direction: column;
    }

    .section3 img {
        width: 100%;
        margin-top: 2px;
    }

    .hero_buttons {
        flex-direction: column;
    }

    .foot_section_1 {
        flex-direction: column;
    }

    .Social_LinksContainer {
        justify-content: center;
    }

    .foot_links {
        padding: 16px 0;
    }

    .foot_section2 {
        padding: 0 0 30px 0;
    }

    .section3_about_title {
        text-align: center;
    }

    .top_navigation {
        min-width: 90%;
    }

    .hero_heading h1 {
        max-width: 95%;
        font-size: 52px;
    }

    .hero_paragrap p {
        max-width: 95%;
    }

    .hero_heading h1 span {
        font-size: 60px;
    }

    .section4_description {
        max-width: 100%;
    }

    .section4 {
        padding: 80px 0;
    }

    .section4 h1 {
        font-size: 53px;
        font-weight: bold;
    }
}

